<resources>
    <string name="app_name">ImageClassification</string>
    <string name="launch_gallery">افتح المعرض</string>
    <string name="take_picture">القط صورة</string>
    <string name="settings">الاعدادات</string>
    <string name="profile">الملف الشخصى</string>
    <string name="about_us">عن التطبيق</string>
    <string name="logout">تسجيل خدوج</string>
    <string name="login">تسجيل دخول</string>
    <string name="name">الاسم</string>
    <string name="email">البريد الالكتدونى</string>
    <string name="title">اللقب</string>
    <string name="signup">انشاء حساب</string>
    <string name="password">كلمة السر</string>
    <string name="confirm_password">تاكيد كلمة السر</string>
    <string name="alert_title">Oooops</string>
    <string name="close">Close</string>
    <string name="err_please_enter_name">من فضلك ادخل اسم</string>
    <string name="err_no_internet">من فضلك افتح الانترنت</string>
    <string name="err_please_enter_title">من فضلك ادخل اللقب</string>
    <string name="err_please_enter_mail">من فضلك البريد الالكتدونى</string>
    <string name="err_please_enter_password">من فضلك ادخل كلمة السر</string>
    <string name="err_password_at_least">كلمة السر يجب ان تكون علي الاقل ٦ حروف</string>
    <string name="err_please_enter_valid_mail">من فضلك ادخل بريد الكتروني صحيح</string>
    <string name="err_confirm_pass_wrong">من فضلك اكد علي كلمة السر</string>
    <string name="please_enter">الرجاء إدخال البريد الإلكتروني و كلمة السر لتسجيل الدخول</string>
    <string name="welcome_txt">أهلاً بك</string>
    <string name="welcome_back">مرحباَ بعودتك</string>
    <string name="please_enter_signup">الرجاء إدخال بياناتك لإنشاء حساب</string>
    <string name="to_signup_click">لإنشاء حساب اضغط</string>
    <string name="here">هنا</string>
    <string name="welcome_text">اكتشف نوعية</string>
    <string name="continue_">استمرار</string>
    <string name="home_page">الصفحة الرئيسية</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">عند الضغط على استمرار سيتم تحويلك لالتقاط صورة لأي مبنى من مباني كلية تربية نوعية و عرض جميع المعلومات الخاصة بهذا المبنى *يمكنك أيضاً اختيار صورة من معرض الصور الخاص بك*</string>
    <string name="show_building_details">عرض محتويات المبني</string>
    <string name="hide">اخفاء</string>
    <string name="live_camera">افتح الكاميرا</string>
    <string name="home_item">الرئيسية</string>
    <string name="password_reset_msg">تم ارسال بريد الكتروني لتغير كلمة السر</string>
    <string name="forgot_password">نسيت كلمة السر</string>
    <string name="undefined">لا يمكن تحديده</string>
    <string name="ektashef_naw3ya">اكتشف نوعية</string>
    <string name="buildings">المباني</string>
</resources>