<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/settingsMenuItem"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/settings"
        android:checkable="true"/>
    <item
        android:id="@+id/profileMenuItem"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/profile"
        android:checkable="true"/>
    <item
        android:id="@+id/aboutMenuItem"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/about_us"
        android:checkable="true"/>
    <item
        android:id="@+id/logouttMenuItem"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/logout"
        android:checkable="true"/>
</menu>