<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.homeactivity.HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/hello_blank_fragment"
            android:background="@drawable/app_bg">

            <ImageView
                android:id="@+id/ainShamsImage"
                android:layout_width="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_height="260dp"
                android:scaleType="fitXY"
                android:src="@drawable/ain_shams" />

            <TextView
                android:id="@+id/descriptionTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/ainShamsImage"
                android:layout_marginTop="70dp"
                android:layout_marginHorizontal="10dp"
                android:text="@string/description"
                android:textSize="24sp"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/continueBtn"
                android:layout_width="148dp"
                android:layout_height="wrap_content"
                android:text="@string/continue_"
                android:textSize="16sp"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionTv"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_bg_radius_24"
                app:backgroundTint="@color/green_btn_bg" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>