<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.imageclassification.presentation.homeactivity.ClassificationViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.homeactivity.ClassificationFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/appBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:elevation="5dp"
                android:background="@color/baby_blue"
                android:paddingVertical="10dp">
                <ImageButton
                    android:id="@+id/backBtn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/left_arrow"
                    app:backgroundTint="@color/white"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ektashef_naw3ya"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="5dp"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    android:layout_marginHorizontal="5dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <Button
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:id="@+id/LiveCameraTxt"
                android:text="@string/live_camera"
                android:textAllCaps="false"
                android:textSize="21sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginVertical="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/launchGalleryTxt"
                android:background="@drawable/btn_bg_radius_24"
                app:backgroundTint="@color/baby_blue"
                app:layout_constraintEnd_toEndOf="parent"/>
            <Button
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:id="@+id/launchGalleryTxt"
                android:text="@string/launch_gallery"
                android:textAllCaps="false"
                android:layout_alignParentBottom="true"
                android:textSize="21sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginVertical="10dp"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@drawable/btn_bg_radius_24"
                app:backgroundTint="@color/baby_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/takePictureTxt" />
            <Button
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:id="@+id/takePictureTxt"
                android:text="@string/take_picture"
                android:textAllCaps="false"
                android:layout_alignParentBottom="true"
                android:textSize="21sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginVertical="10dp"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@drawable/btn_bg_radius_24"
                app:backgroundTint="@color/baby_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/imageIV"
                android:scaleType="fitXY"
                android:src="@drawable/main_thumb"
                app:layout_constraintTop_toBottomOf="@+id/appBar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
            <TextView
                android:id="@+id/undefinedTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/imageIV"
                android:layout_marginTop="30dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>